--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         tools:targetApi="31">
         <activity
             android:name="com.masliaiev.points.presentation.screens.navigation.MapNavigationActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.Points">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -27,7 +28,6 @@
         <activity
             android:name="com.masliaiev.points.presentation.screens.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Points">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,6 +39,14 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <service
+            android:name=".data.services.PushNotificationsService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
